force-app/main/default/objects/Log_Exception__c/Log_Exception__c.object-meta.xml
<CustomObject>
    <label>Log Exception</label>
    <nameField>
        <displayFormat>LE-{000000}</displayFormat>
        <label>Log Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>