force-app/main/default/objects/Log_Exception__c/fields/Governor_Limit_in_Code__c.field-meta.xml
<CustomField>
    <fullName>Governor_Limit_in_Code__c</fullName>
    <label>Governor Limit in Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>