force-app/main/default/objects/Log_Exception__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>